--- a/Source/Mosa.UnitTest.Collection.xUnit/ComparisonFixture.tt
+++ b/Source/Mosa.UnitTest.Collection.xUnit/ComparisonFixture.tt
@@ -13,7 +13,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 	public class Fixture_Comparisone<#= compare.Value #><#= number.Value #> : TestFixture
 	{
 		[Theory]
-		[MemberData(nameof(<#= number.Value #><#= number.Value #>), DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #><#= number.Value #>))]
 		public void Compare<#= compare.Value #><#= number.Value #>(<#= number.Key #> a, <#= number.Key #> b)
 		{
 			Assert.Equal(ComparisonTests.Compare<#= compare.Value #><#= number.Value #>(a, b), Run<bool>("Mosa.UnitTest.Collection.ComparisonTests.Compare<#= compare.Value #><#= number.Value #>", a, b));
