--- a/Source/Mosa.UnitTest.Collection.xUnit/SwitchFixture.tt
+++ b/Source/Mosa.UnitTest.Collection.xUnit/SwitchFixture.tt
@@ -9,7 +9,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 	public class Fixture_Switch<#= number.Value #> : TestFixture
 	{
 		[Theory]
-		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #>))]
 		public void Switch<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.Equal(Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>(a), Run<<#= number.Key #>>("Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>", a));
@@ -21,7 +21,7 @@ namespace Mosa.UnitTest.Collection.xUnit
 public class Fixture_Switch<#= number.Value #> : TestFixture
 	{
 		[Theory]
-		[MemberData(nameof(<#= number.Value #>), DisableDiscoveryEnumeration = true)]
+		[MemberData(nameof(<#= number.Value #>))]
 		public void Switch<#= number.Value #>(<#= number.Key #> a)
 		{
 			Assert.Equal(Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>(a), Run<<#= number.Key #>>("Mosa.UnitTest.Collection.SwitchTests.Switch<#= number.Value #>", a));
