--- a/Source/Mosa.Platform.x86/Instructions/X86Instructions.tt
+++ b/Source/Mosa.Platform.x86/Instructions/X86Instructions.tt
@@ -173,7 +173,7 @@ namespace Mosa.Platform.x86.Instructions
 
 		public override bool HasIRUnspecifiedSideEffect { get { return true; } }
 <# } #>
-<# if (entry.X86ThreeTwoAddressConversion == null || entry.X86ThreeTwoAddressConversion == "true") { #>
+<# if (entry.X86ThreeTwoAddressConversion != null && entry.X86ThreeTwoAddressConversion == "true") { #>
 
 		public override bool ThreeTwoAddressConversion { get { return true; } }
 <# } #>
