--- a/Source/Mosa.UnitTest.Collection/StructTests.tt
+++ b/Source/Mosa.UnitTest.Collection/StructTests.tt
@@ -18,7 +18,7 @@ namespace Mosa.UnitTest.Collection
 			return (structure.One.Equals(one));
 		}
 
-		[MosaUnitTest(Series = "<#= number.Value #><#= number.Value #>")]
+		//[MosaUnitTest(Series = "<#= number.Value #>Mini<#= number.Value #>Mini")]
 		public static bool StructTestSet2<#= number.Value #>(<#= number.Key #> one, <#= number.Key #> two)
 		{
 			Struct3<#= number.Value #> structure;
@@ -29,7 +29,7 @@ namespace Mosa.UnitTest.Collection
 			return (structure.One.Equals(one) && structure.Two.Equals(two));
 		}
 
-		[MosaUnitTest(Series = "<#= number.Value #><#= number.Value #><#= number.Value #>")]
+		//[MosaUnitTest(Series = "<#= number.Value #>Mini<#= number.Value #>Mini<#= number.Value #>Mini")]
 		public static bool StructTestSet3<#= number.Value #>(<#= number.Key #> one, <#= number.Key #> two, <#= number.Key #> three)
 		{
 			Struct3<#= number.Value #> structure;
