--- a/Source/Mosa.UnitTests/Basic/LdlocaTests.tt
+++ b/Source/Mosa.UnitTests/Basic/LdlocaTests.tt
@@ -1,7 +1,7 @@
 ﻿<#@ include file="../../TemplateLibrary.txt" #>
 using System;
 
-namespace Mosa.UnitTests.Basic.Basic
+namespace Mosa.UnitTests.Basic
 {
 
 	public static class LdlocaTests 
