--- a/Source/Mosa.Tool.Launcher/MainWindow.axaml
+++ b/Source/Mosa.Tool.Launcher/MainWindow.axaml
@@ -188,7 +188,10 @@
             </TabItem>
 
             <TabItem Header="Output" FontSize="14">
-	            <TextBox Name="OutputTxt" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Width="777" Height="475"></TextBox>
+	            <StackPanel>
+		            <ProgressBar Name="OutputProgress" Width="777" Height="20"></ProgressBar>
+		            <TextBox Name="OutputTxt" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Margin="0, 10, 0, 0" Width="777" Height="445"></TextBox>
+	            </StackPanel>
             </TabItem>
         </TabControl>
     </Canvas>
